# Tahook/TahookDomain/Models/Question.cs
@@ -23,5 +23,9 @@
             Quiz = quiz;
             Answers = answers;
         }
+
+        public Question()
+        {
+        }
     }
 }
